template for use with blazehtml

--- a/sswc.cabal
+++ b/sswc.cabal
@@ -32,3 +32,4 @@ library
                      , syb
                      , containers
                      , blaze-builder
+                     , blaze-html
