simple handlebars interpolation

--- a/sswc.cabal
+++ b/sswc.cabal
@@ -33,3 +33,4 @@ library
                      , containers
                      , blaze-builder
                      , blaze-html
+                     , blaze-markup
