--- a/sswc.cabal
+++ b/sswc.cabal
@@ -34,3 +34,4 @@ library
                      , blaze-builder
                      , blaze-html
                      , blaze-markup
+                     , generics-sop
