--- a/sswc.cabal
+++ b/sswc.cabal
@@ -16,7 +16,7 @@ executable sswc
   main-is:             Main.hs
   hs-source-dirs:      src
   ghc-options:         -Wall -fno-warn-unused-do-bind
-  build-depends:       base ==4.6.*
+  build-depends:       base >4.6 && <5
                      , sswc
                      , text
 
@@ -25,7 +25,7 @@ library
   exposed-modules:     Text.SSWC
   hs-source-dirs:      lib
   ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-orphans -fwarn-incomplete-patterns
-  build-depends:       base ==4.6.*
+  build-depends:       base >4.6 && <5
                      , xmlhtml <0.2.4
                      , bytestring
                      , text
